--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="hero-right-box">
                             <div class="hero-right-box-img">
                                 <div class="img">
-                                    <a href="#"><img src="../images/mm.png" id="img" alt="myphoto"></a>
+                                    <a href="#"><img src="images/mm.png" id="img" alt="myphoto"></a>
                                 </div>
                             </div>
                             <div class="hero-right-box-text">
